# human-in-the-loop-slack-python

./: README.md  main.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
src/human_in_the_loop/: __init__.py  config.py  main.py
src/human_in_the_loop/mcp/: __init__.py  server.py  tools.py
src/human_in_the_loop/slack/: __init__.py  client.py  formatting.py
